# peasy-pdf

./: .gitignore  README.md  demo.tape  pyproject.toml
docs/superpowers/plans/: 2026-03-17-peasy-5-language-expansion.md
docs/superpowers/specs/: 2026-03-17-peasy-5-language-expansion-design.md
src/peasy_pdf/: __init__.py  __main__.py  api.py  cli.py  engine.py  mcp_server.py
tests/: test_engine.py
