[project]
name = "peasy-pdf"
version = "0.2.0"
description = "Python PDF toolkit — merge, split, rotate, compress, extract text, encrypt, decrypt, and 14 more operations. Powered by pypdf."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Peasy Tools" }]
keywords = [
    "pdf",
    "merge-pdf",
    "split-pdf",
    "compress-pdf",
    "rotate-pdf",
    "extract-text",
    "pdf-metadata",
    "encrypt-pdf",
    "decrypt-pdf",
    "pdf-tools",
    "pdf-toolkit",
    "pdf-manipulation",
    "pypdf",
    "page-numbers",
    "watermark",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = ["pypdf>=4.0"]

[project.optional-dependencies]
api = ["httpx>=0.27"]
cli = ["typer>=0.15", "rich>=13.0"]
mcp = ["mcp>=1.0"]
all = ["peasy-pdf[api,cli,mcp]"]

[project.scripts]
peasy-pdf = "peasy_pdf.cli:app"

[project.entry-points."mcp.servers"]
peasy-pdf = "peasy_pdf.mcp_server:mcp"

[project.urls]
Homepage = "https://peasypdf.com"
"Merge PDF" = "https://peasypdf.com/tools/merge-pdf/"
"Split PDF" = "https://peasypdf.com/tools/split-pdf/"
"Compress PDF" = "https://peasypdf.com/tools/compress-pdf/"
Documentation = "https://peasypdf.com/developers/"
Repository = "https://github.com/peasytools/peasy-pdf"
Issues = "https://github.com/peasytools/peasy-pdf/issues"
Changelog = "https://github.com/peasytools/peasy-pdf/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peasy_pdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mcp>=1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "rich>=13.0",
    "ruff>=0.15.4",
    "typer>=0.15",
]
